--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<h2>A revolução do Google está chegando</h2>
 	</hgroup>
 
-	<img src="_imagens/glass-oculos-preto-peq.png"/>
+	<img id="icon" src="_imagens/glass-oculos-preto-peq.png"/>
 
 	<nav id="menu">
 		<h1>Menu Principal</h1>
@@ -38,13 +38,15 @@
 <h2>O que é</h2>
 <p> <span style="font-weight:900;"> Google Glass</span> é um acessório em forma
 de óculos que possibilita a interação dos usuários com diversos conteúdos em
-realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project
-Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz,
-enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu
-lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil.
-Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um
-vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas
-registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
+realidade aumentada. Também chamado de
+<a href="http://glass.google.com" target="_blank">Project Glass</a>, o
+eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens
+instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento está
+previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o
+<em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo
+totalmente gravado com o dispositivo. Além disso, a companhia de buscas
+registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.
+</p>
 
 <figure class="foto-legenda">
 	<img src="_imagens/glass-quadro-homem-mulher.jpg"/>
@@ -75,9 +77,10 @@ opções com o movimento da cabeça.</p>
 
 <h1>O que você pode fazer com o Google Glasses</h1>
 <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma
-espécie de “super<wbr/>humano”, já que o aparelho pode indicar a quantos metros você
-está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda
-e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
+espécie de “super<wbr/>humano”, já que o aparelho pode indicar a quantos metros
+você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima,
+agenda e até mesmo permitir que você marque encontros apenas com comandos de
+voz.</p>
 
 [AQUI ENTRA UM VÍDEO]
 
