--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	</nav>
 	</header>
 
+<section id="body">
 <hgroup>
 <h3>Tecnologia > Inovações</h3>
 <h1>Saiba tudo sobre o Google Glass</h1>
@@ -84,6 +85,8 @@ voz.</p>
 
 [AQUI ENTRA UM VÍDEO]
 
+</section>
+<aside id="side">
 <h1>Outras Notícias</h1>
 <h2>Vídeo mais recente</h2>
 
@@ -101,8 +104,11 @@ chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção,
 equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros
 de distância do espectador.</p>
 
-<p>Copyright &copy; 2013 - by Gustavo Guanabara
-Facebook | Twitter </p>
+</aside>
+<footer id="footer">
+<p>Copyright &copy; 2013 - by Gustavo Guanabara <br/>
+<a href="https://www.facebook.com/gustavo.olegario" target="_blank">Facebook</a> | Twitter </p>
+</footer>
 </div>
 </body>
 </html>
