--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@ lançamento para as lojas fica para, pelo menos, 2014.</p>
 
 <h1>Especificações Técnicas</h1>
 <table id="tablespec">
-<caption>Tabela Técnica do Google Glass Mar/2013</caption>
+<caption>Tabela Técnica do Google Glass <span>Mar/2013</span></caption>
 
-<tr><td>Tela</td><td>Resolução equivalente a tela de 25"</td></tr>
-<tr><td rowspan="2">Camera</td> <td>5MP para fotos </td></tr>
-<tr><td>720p para vídeos</td></tr>
-<tr><td rowspan="2">Conectividade <td>Wi-Fi</td></tr>
-<tr><td>Bluetooth</td></tr>
-<tr><td>Memória Interna</td> <td>12GB</td></tr>
+<tr><td class="lc">Tela</td><td class="rc">Resolução equivalente a tela de 25"</td></tr>
+<tr><td rowspan="2" class="lc">Camera</td> <td class="rc">5MP para fotos </td></tr>
+<tr><td class="rc">720p para vídeos</td></tr>
+<tr><td rowspan="2" class="lc">Conectividade <td class="rc">Wi-Fi</td></tr>
+<tr><td class="rc">Bluetooth</td></tr>
+<tr><td class="lc">Memória Interna</td> <td class="rc">12GB</td></tr>
 </table>
 
 <h1>Como funciona</h1>
