--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -1,14 +1,47 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8"/>
+    <title>Tudo sobre o Google Glass</title>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
 
-[AQUI ENTRA UMA FOTO]
+</head>
+<script language="javascript" src="_javascript/funcoes.js"></script>
+<body>
+<div id="interface">
+    <header id="header">
+    <hgroup>
+    <h1>Google Glass</h1>
+    <h2>A revolução do Google está chegando</h2>
+    </hgroup>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+    <img id="icon" src="_imagens/glass-oculos-preto-peq.png"/>
+
+    <nav id="menu">
+        <h1>Menu Principal</h1>
+        <ul type="disk">
+            <li onmouseover="changePhoto('_imagens/home.png')"
+            onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+            <a href="index.html">Home</a></li>
+
+            <li onmouseover="changePhoto('_imagens/especificacoes.png')"
+            onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+            <a href="specs.html">Especificações</a></li>
+
+            <li onmouseover="changePhoto('_imagens/fotos.png')"
+            onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+            <a href="fotos.html">Fotos</a></li>
+
+            <li onmouseover="changePhoto('_imagens/multimidia.png')"
+            onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+            <a href="multimidia.html">Multimídia</a></li>
+
+            <li onmouseover="changePhoto('_imagens/contato.png')"
+            onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+            <a href="fale-conosco.html">Fale conosco</a></li>
+        </ul>
+    </nav>
+    </header>
 
 Fale Conosco > Contato
 Formulário de Contato
@@ -43,5 +76,10 @@ Quero um Google Glass
 
 [BOTÃO ENVIAR]
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+<footer id="footer">
+<p>Copyright &copy; 2013 - by Gustavo Guanabara <br/>
+<a href="https://www.facebook.com/gustavo.olegario" target="_blank">Facebook</a> | Twitter </p>
+</footer>
+</div>
+</body>
+</html>
