--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
 
 </head>
+<script language="javascript" src="_javascript/funcoes.js"></script>
 <body>
 <div id="interface">
 	<header id="header">
@@ -19,11 +20,25 @@
 	<nav id="menu">
 		<h1>Menu Principal</h1>
 		<ul type="disk">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="specs.html">Especificações</a></li>
-			<li><a href="fotos.html">Fotos</a></li>
-			<li><a href="multimidia.html">Multimídia</a></li>
-			<li><a href="fale-conosco.html">Fale conosco</a></li>
+			<li onmouseover="changePhoto('_imagens/home.png')"
+			onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+			<a href="index.html">Home</a></li>
+
+			<li onmouseover="changePhoto('_imagens/especificacoes.png')"
+			onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+			<a href="specs.html">Especificações</a></li>
+
+			<li onmouseover="changePhoto('_imagens/fotos.png')"
+			onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+			<a href="fotos.html">Fotos</a></li>
+
+			<li onmouseover="changePhoto('_imagens/multimidia.png')"
+			onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+			<a href="multimidia.html">Multimídia</a></li>
+
+			<li onmouseover="changePhoto('_imagens/contato.png')"
+			onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+			<a href="fale-conosco.html">Fale conosco</a></li>
 		</ul>
 	</nav>
 	</header>
