--- a/specs.html
+++ b/specs.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8"/>
 	<title>Tudo sobre o Google Glass</title>
 	<link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+	<link rel="stylesheet" type="text/css" href="_css/specs.css"/>
 
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
@@ -43,14 +44,28 @@
 	</nav>
 	</header>
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+<section id="body-full">
+	<article id="main-notice">
+		<header id="article-header">
+			<hgroup>
+				<h3>Glass > Especificações</h3>
+				<h1>Raio-X no Google Glass</h1>
+				<h2>por Gustavo Guanabara</h2>
+				<h3 class="right">Atualizado em 01/Maio/2013</h3>
+			</hgroup>
+		</header>
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+	<p>Clique em qualquer área destacada da imagem para ter mais informações
+	sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um
+	lugar cheio de novas informações.</p>
 
-[AQUI ENTRA UMA IMAGEM]
+	<section id="content">
+		<img src="_imagens/glass-esquema-marcado.jpg"/>
+		<iframe src="google-glass.html" name="window" id="frame-spec" scrolling="no">
+		</iframe>
+	</section>
+	</article>
+</section>
 
 <footer id="footer">
 <p>Copyright &copy; 2013 - by Gustavo Guanabara <br/>
