--- a/fotos.html
+++ b/fotos.html
@@ -54,6 +54,8 @@
 				<h3 class="right">Atualizado em 01/Maio/2013</h3>
 			</hgroup>
 		</header>
+	</article>
+</section>
 
 <p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das
 principais características do Google Glass, como recursos e propriedades que
