--- a/multimidia.html
+++ b/multimidia.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8"/>
 	<title>Tudo sobre o Google Glass</title>
 	<link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+	<link rel="stylesheet" type="text/css" href="_css/media.css">
 
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
@@ -15,44 +16,59 @@
 	<h2>A revolução do Google está chegando</h2>
 	</hgroup>
 
-	<img id="icon" src="_imagens/glass-oculos-preto-peq.png"/>
+	<img id="icon" src="_imagens/multimidia.png"/>
 
 	<nav id="menu">
 		<h1>Menu Principal</h1>
 		<ul type="disk">
 			<li onmouseover="changePhoto('_imagens/home.png')"
-			onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+			onmouseout="changePhoto('_imagens/multimidia.png')">
 			<a href="index.html">Home</a></li>
 
 			<li onmouseover="changePhoto('_imagens/especificacoes.png')"
-			onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+			onmouseout="changePhoto('_imagens/multimidia.png')">
 			<a href="specs.html">Especificações</a></li>
 
 			<li onmouseover="changePhoto('_imagens/fotos.png')"
-			onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+			onmouseout="changePhoto('_imagens/multimidia.png')">
 			<a href="fotos.html">Fotos</a></li>
 
 			<li onmouseover="changePhoto('_imagens/multimidia.png')"
-			onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+			onmouseout="changePhoto('_imagens/multimidia.png')">
 			<a href="multimidia.html">Multimídia</a></li>
 
 			<li onmouseover="changePhoto('_imagens/contato.png')"
-			onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+			onmouseout="changePhoto('_imagens/multimidia.png')">
 			<a href="fale-conosco.html">Fale conosco</a></li>
 		</ul>
 	</nav>
 	</header>
 
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+	<section id="body-full">
+		<article id="main-notice">
+			<header id="article-header">
+				<hgroup>
+					<h3>Glass > Multímidia</h3>
+					<h1>Sons e vídeos</h1>
+					<h2>por Gustavo Guanabara</h2>
+					<h3 class="right">Atualiazdo em 01/Maio/2013</h3>
+				</hgroup>
+			</header>
+			<div id="tv-radio">
+				<audio id="music" controls="controls">
+					<source src="_media/2009-lovers-carvings-bibio.mp3"
+					type="audio/mpeg"/>
+					Desculpe, mas não foi possível carregar o áudio.
+				</audio>
+				<video id="film" controls="controls"
+				poster="_imagens/video-mini03.jpg">
+					<source src="_media/getting-started.mp4" type="video/mp4"/>
+					Desculpe, mas não foi possível carregar o áudio.
+				</video>
+			</div>
+		</article>
+	</section>
 
-
-Áudio e Vídeo
-
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
 
 <footer id="footer">
 <p>Copyright &copy; 2013 - by Gustavo Guanabara <br/>
