--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Tudo sobre o Google Glass</title>
     <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+    <link rel="stylesheet" type="text/css" href="_css/form.css"/>
 
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
@@ -15,29 +16,29 @@
     <h2>A revolução do Google está chegando</h2>
     </hgroup>
 
-    <img id="icon" src="_imagens/glass-oculos-preto-peq.png"/>
+    <img id="icon" src="_imagens/contato.png"/>
 
     <nav id="menu">
         <h1>Menu Principal</h1>
         <ul type="disk">
             <li onmouseover="changePhoto('_imagens/home.png')"
-            onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+            onmouseout="changePhoto('_imagens/contato.png')">
             <a href="index.html">Home</a></li>
 
             <li onmouseover="changePhoto('_imagens/especificacoes.png')"
-            onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+            onmouseout="changePhoto('_imagens/contato.png')">
             <a href="specs.html">Especificações</a></li>
 
             <li onmouseover="changePhoto('_imagens/fotos.png')"
-            onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+            onmouseout="changePhoto('_imagens/contato.png')">
             <a href="fotos.html">Fotos</a></li>
 
             <li onmouseover="changePhoto('_imagens/multimidia.png')"
-            onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+            onmouseout="changePhoto('_imagens/contato.png')">
             <a href="multimidia.html">Multimídia</a></li>
 
             <li onmouseover="changePhoto('_imagens/contato.png')"
-            onmouseout="changePhoto('_imagens/glass-oculos-preto-peq.png')">
+            onmouseout="changePhoto('_imagens/contato.png')">
             <a href="fale-conosco.html">Fale conosco</a></li>
         </ul>
     </nav>
