--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ voz.</p>
 <h1>Outras Notícias</h1>
 <h2>Vídeo mais recente</h2>
 <div>
-	<video controls="controls" poster="_imagens/video-mini02.jpg">
+	<video controls="controls" poster="_imagens/video-mini02.jpg" id="video-mini02">
 		<source src="_media/how-it-feels.mp4" type="video/mp4"/>
 	</video>
 </div>
